--- a/PngAddicts/package.json
+++ b/PngAddicts/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "ag-grid-community": "^29.1.0",
-    "ag-grid-react": "^29.1.0"
+    "ag-grid-react": "^29.1.0",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
